Fixed document resize to fit the available screen, and remove double scrollbars. Also fixed height of playhead line to be dynamic.

--- a/src/windows/html/timeline/media/css/main.css
+++ b/src/windows/html/timeline/media/css/main.css
@@ -7,6 +7,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(14,14,14,1)), color-stop(100%,rgba(125,126,125,1)));
+	overflow: hidden; /* prevent document scrollbars (the timeline handles it's own overflow) */
 }
 
 /* General */
